add basic fetch to retrive github ids

--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,8 @@
     <title><%= htmlWebpackPlugin.options.title %></title>
   </head>
   <body>
-    <div id="root"></div>
+    <div>
+      <ul id="root"></ul>
+    </div>
   </body>
 </html>
