add first task implementation

--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,10 @@
   </head>
   <body>
     <div>
+      <form id="searchForm">
+        <label for="searchInput">Start typing Github username: </label>
+        <input type="text" id="searchInput" size="20" maxlength="256">
+      </form>
       <ul id="root"></ul>
     </div>
   </body>
